Fixed Kluks website link

--- a/contributors.html
+++ b/contributors.html
@@ -72,7 +72,7 @@
           <img src="https://cdn.discordapp.com/avatars/439396770695479297/c165ee3e7b89dbe5c9ac767d557bf7e5.webp?size=1024" alt="Avatar" width="30%" height="auto" />
           <h4>KlukCZ<strong class="discrim">#6589</strong></h4>
 
-          <a href="http://klukcz.me/" target="_blank" rel="noopener noreferrer"><i class="fas fa-globe" style="font-size: 30px;"> </i></a>
+          <a href="https://klukcz.github.io/My-Website/" target="_blank" rel="noopener noreferrer"><i class="fas fa-globe" style="font-size: 30px;"> </i></a>
           <a href="https://twitter.com/KlukCZ" target="_blank" rel="noopener noreferrer"><i class="fab fa-twitter" style="font-size: 30px;"> </i></a>
           <a href="https://github.com/KlukCZ" target="_blank" rel="noopener noreferrer"><i class="fab fa-github" style="font-size: 30px;"> </i></a>
 
