--- a/projects.html
+++ b/projects.html
@@ -71,8 +71,8 @@
             <br />
             <p>A unoffical Discord Testers report template generator.</p>
             <br />
-            <a href="https://github.com/y3ll0wlife/bug-report-tool" target="_blank" class="tooltipped" data-position="top" data-tooltip="Github Repo"><i class="fab fa-github" style="font-size: 30px;"></i></a>
-            <a href="https://y3ll0wlife.github.io/bug-report-tool/index.html" target="_blank" class="tooltipped" data-position="top" data-tooltip="Live Website"><i class="fas fa-globe" style="font-size: 30px;"></i></a>
+            <a href="https://github.com/TestersQTs/bug-report-tool" target="_blank" class="tooltipped" data-position="top" data-tooltip="Github Repo"><i class="fab fa-github" style="font-size: 30px;"></i></a>
+            <a href="https://testersqts.github.io/bug-report-tool/" target="_blank" class="tooltipped" data-position="top" data-tooltip="Live Website"><i class="fas fa-globe" style="font-size: 30px;"></i></a>
           </div>
         </div>
          <div class="card">
