goose-bot changes to card

--- a/projects.html
+++ b/projects.html
@@ -82,7 +82,7 @@
           </div>
           <div class="card-content">
             <i class="fab fa-discord tooltipped" data-position="top" data-tooltip="Discord Bot" style="font-size: 24px;"> / </i>
-            <i class="fab fa-node-js tooltipped" data-position="top" data-tooltip="Node JS" style="font-size: 24px;"> / </i>
+            <i class="fab fa-java tooltipped" data-position="top" data-tooltip="Java" style="font-size: 24px;"> / </i>
             <i class="fab fa-git-alt tooltipped" data-position="top" data-tooltip="Git" style="font-size: 24px;"></i>
             <br />
             <br />
