--- a/contributors.html
+++ b/contributors.html
@@ -61,6 +61,8 @@
           <br />
           <img src="https://cdn.discordapp.com/avatars/190160914765316096/e1a9b937d7b1d469157ea7c2defd1288.webp?size=1024" alt="Avatar" width="30%" height="auto" />
           <h4>mrphilip<strong class="discrim">#0882</strong></h4>
+          <p>Lockpicking enthusiast | Web dev | Student | Bug hunter & Hypesquad Event attendee for Discord</p>
+          <br />
           <a href="https://y3ll0wlife.github.io/Portfolio/" target="_blank" rel="noopener noreferrer"><i class="fas fa-globe" style="font-size: 30px;"> </i></a>
           <a href="https://twitter.com/y3ll0wLife" target="_blank" rel="noopener noreferrer"><i class="fab fa-twitter" style="font-size: 30px;"> </i></a>
           <a href="https://github.com/y3ll0wlife" target="_blank" rel="noopener noreferrer"><i class="fab fa-github" style="font-size: 30px;"> </i></a>
@@ -72,6 +74,8 @@
           <img src="https://cdn.discordapp.com/avatars/439396770695479297/c165ee3e7b89dbe5c9ac767d557bf7e5.webp?size=1024" alt="Avatar" width="30%" height="auto" />
           <h4>KlukCZ<strong class="discrim">#6589</strong></h4>
 
+          <p>17 yo Chem Student. Discord Testers Junior Moderator and Bug Hunter in my free time</p>
+          <br />
           <a href="https://klukcz.github.io/My-Website/" target="_blank" rel="noopener noreferrer"><i class="fas fa-globe" style="font-size: 30px;"> </i></a>
           <a href="https://twitter.com/KlukCZ" target="_blank" rel="noopener noreferrer"><i class="fab fa-twitter" style="font-size: 30px;"> </i></a>
           <a href="https://github.com/KlukCZ" target="_blank" rel="noopener noreferrer"><i class="fab fa-github" style="font-size: 30px;"> </i></a>
