Welcome Ben! to the developer team

--- a/contributors.html
+++ b/contributors.html
@@ -1,96 +1,111 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>TestserQTS | Contributors</title>
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>TestserQTS | Contributors</title>
 
-    <!-- CSS -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/css/materialize.min.css" />
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
-    <link rel="stylesheet" href="css/main.css" />
-    <script src="https://kit.fontawesome.com/a8af6d95e8.js" crossorigin="anonymous"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Squada+One&display=swap" rel="stylesheet" />
-  </head>
+		<!-- CSS -->
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/css/materialize.min.css" />
+		<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
+		<link rel="stylesheet" href="css/main.css" />
+		<script src="https://kit.fontawesome.com/a8af6d95e8.js" crossorigin="anonymous"></script>
+		<link href="https://fonts.googleapis.com/css2?family=Squada+One&display=swap" rel="stylesheet" />
+	</head>
 
-  <body>
-    <nav class="navColor" style="padding: 0px 5px; position: fixed; z-index: 1;">
-      <div class="nav-bar" style="position: center;">
-        <a href="index.html" class="brand-logo" id="titleText">TesterQTS</a>
+	<body>
+		<nav class="navColor" style="padding: 0px 5px; position: fixed; z-index: 1;">
+			<div class="nav-bar" style="position: center;">
+				<a href="index.html" class="brand-logo" id="titleText">TesterQTS</a>
 
-        <a href="#" class="sidenav-trigger" data-target="mobile-nav">
-          <i class="material-icons">menu</i>
-        </a>
+				<a href="#" class="sidenav-trigger" data-target="mobile-nav">
+					<i class="material-icons">menu</i>
+				</a>
 
-        <ul class="right hide-on-med-and-down">
-          <li>
-            <a href="index.html"><i class="material-icons left">home</i>Home</a>
-          </li>
-          <li>
-            <a href="projects.html"><i class="material-icons left">apps</i>Projects</a>
-          </li>
-          <li>
-            <a href="contributors.html"><i class="material-icons left">group</i>Contributors</a>
-          </li>
-        </ul>
-      </div>
-    </nav>
-    <ul class="sidenav" id="mobile-nav">
-      <li>
-        <a href="index.html"><i class="material-icons left">home</i>Home</a>
-      </li>
-      <li>
-        <a href="projects.html"><i class="material-icons left">apps</i>Projects</a>
-      </li>
-      <li>
-        <a href="contributors.html"><i class="material-icons left">group</i>Contributors</a>
-      </li>
-    </ul>
+				<ul class="right hide-on-med-and-down">
+					<li>
+						<a href="index.html"><i class="material-icons left">home</i>Home</a>
+					</li>
+					<li>
+						<a href="projects.html"><i class="material-icons left">apps</i>Projects</a>
+					</li>
+					<li>
+						<a href="contributors.html"><i class="material-icons left">group</i>Contributors</a>
+					</li>
+				</ul>
+			</div>
+		</nav>
+		<ul class="sidenav" id="mobile-nav">
+			<li>
+				<a href="index.html"><i class="material-icons left">home</i>Home</a>
+			</li>
+			<li>
+				<a href="projects.html"><i class="material-icons left">apps</i>Projects</a>
+			</li>
+			<li>
+				<a href="contributors.html"><i class="material-icons left">group</i>Contributors</a>
+			</li>
+		</ul>
 
-    <br />
-    <br />
-    <br />
-    <br />
+		<br />
+		<br />
+		<br />
+		<br />
 
-    <div class="column row" id="content">
-      <h3 style="text-align: center;">TesterQTS contributors</h3>
+		<div class="column row" id="content">
+			<h3 style="text-align: center;">TesterQTS contributors</h3>
 
-      <h3 class="staffTitle">Developers</h3>
-      <div class="staffCategories">
-        <div class="card">
-          <br />
-          <img src="https://cdn.discordapp.com/avatars/190160914765316096/e1a9b937d7b1d469157ea7c2defd1288.webp?size=1024" alt="Avatar" width="30%" height="auto" />
-          <h4>mrphilip<strong class="discrim">#0882</strong></h4>
-          <p>Lockpicking enthusiast | Web dev | Student | Bug hunter & Hypesquad Event attendee for Discord</p>
-          <br />
-          <a href="https://y3ll0wlife.github.io/Portfolio/" target="_blank" rel="noopener noreferrer"><i class="fas fa-globe" style="font-size: 30px;"> </i></a>
-          <a href="https://twitter.com/y3ll0wLife" target="_blank" rel="noopener noreferrer"><i class="fab fa-twitter" style="font-size: 30px;"> </i></a>
-          <a href="https://github.com/y3ll0wlife" target="_blank" rel="noopener noreferrer"><i class="fab fa-github" style="font-size: 30px;"> </i></a>
-          <p></p>
-        </div>
+			<h3 class="staffTitle">Developers</h3>
+			<div class="staffCategories">
+				<div class="card">
+					<br />
+					<img src="https://cdn.discordapp.com/avatars/190160914765316096/e1a9b937d7b1d469157ea7c2defd1288.webp?size=1024" alt="Avatar" width="30%" height="auto" />
+					<h4>mrphilip<strong class="discrim">#0882</strong></h4>
+					<p>Lockpicking enthusiast | Web dev | Student | Bug hunter & Hypesquad Event attendee for Discord</p>
+					<br />
+					<a href="https://y3ll0wlife.github.io/Portfolio/" target="_blank" rel="noopener noreferrer"><i class="fas fa-globe" style="font-size: 30px;"> </i></a>
+					<a href="https://twitter.com/y3ll0wLife" target="_blank" rel="noopener noreferrer"><i class="fab fa-twitter" style="font-size: 30px;"> </i></a>
+					<a href="https://github.com/y3ll0wlife" target="_blank" rel="noopener noreferrer"><i class="fab fa-github" style="font-size: 30px;"> </i></a>
+					<p></p>
+				</div>
 
-        <div class="card">
-          <br />
-          <img src="https://cdn.discordapp.com/avatars/439396770695479297/c165ee3e7b89dbe5c9ac767d557bf7e5.webp?size=1024" alt="Avatar" width="30%" height="auto" />
-          <h4>KlukCZ<strong class="discrim">#6589</strong></h4>
+				<div class="card">
+					<br />
+					<img src="https://cdn.discordapp.com/avatars/439396770695479297/c165ee3e7b89dbe5c9ac767d557bf7e5.webp?size=1024" alt="Avatar" width="30%" height="auto" />
+					<h4>KlukCZ<strong class="discrim">#6589</strong></h4>
 
-          <p>17 yo Chem Student. Discord Testers Junior Moderator and Bug Hunter in my free time</p>
-          <br />
-          <a href="https://klukcz.github.io/My-Website/" target="_blank" rel="noopener noreferrer"><i class="fas fa-globe" style="font-size: 30px;"> </i></a>
-          <a href="https://twitter.com/KlukCZ" target="_blank" rel="noopener noreferrer"><i class="fab fa-twitter" style="font-size: 30px;"> </i></a>
-          <a href="https://github.com/KlukCZ" target="_blank" rel="noopener noreferrer"><i class="fab fa-github" style="font-size: 30px;"> </i></a>
+					<p>17 yo Chem Student. Discord Testers Junior Moderator and Bug Hunter in my free time</p>
+					<br />
+					<a href="https://klukcz.github.io/My-Website/" target="_blank" rel="noopener noreferrer"><i class="fas fa-globe" style="font-size: 30px;"> </i></a>
+					<a href="https://twitter.com/KlukCZ" target="_blank" rel="noopener noreferrer"><i class="fab fa-twitter" style="font-size: 30px;"> </i></a>
+					<a href="https://github.com/KlukCZ" target="_blank" rel="noopener noreferrer"><i class="fab fa-github" style="font-size: 30px;"> </i></a>
 
-          <p></p>
-        </div>
-      </div>
-    </div>
+					<p></p>
+				</div>
 
-    <!-- Javascript -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/js/materialize.min.js"></script>
-    <script src="js/theme.js"></script>
-    <script src="js/index.js"></script>
-  </body>
+				<div class="card">
+					<br />
+					<img src="https://cdn.discordapp.com/avatars/255834596766253057/45553db4fcf0aa39b76903f12fa8dbc6.webp?size=1024" alt="Avatar" width="30%" height="auto" />
+					<h4>Ben!<strong class="discrim">#0002</strong></h4>
+
+					<p>16yo self-taught node dev | Discord bug hunter and verified bot dev | I use arch btw | <strike>aaaaaaaaaaaaaaaa</strike>
+          </p>
+					<br />
+					<a href="https://benricheson101.github.io/" target="_blank" rel="noopener noreferrer"><i class="fas fa-globe" style="font-size: 30px;"> </i></a>
+					<a href="https://twitter.com/bbbbbeeeennnn" target="_blank" rel="noopener noreferrer"><i class="fab fa-twitter" style="font-size: 30px;"> </i></a>
+					<a href=https://github.com/Benricheson101" target="_blank" rel="noopener noreferrer"><i class="fab fa-github" style="font-size: 30px;"> </i></a>
+
+					<p></p>
+				</div>
+			</div>
+		</div>
+
+		<!-- Javascript -->
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/js/materialize.min.js"></script>
+		<script src="js/theme.js"></script>
+		<script src="js/index.js"></script>
+	</body>
 </html>
 
 <!--
