--- a/contributors.html
+++ b/contributors.html
@@ -59,7 +59,7 @@
 			<div class="staffCategories">
 				<div class="card">
 					<br />
-					<img src="https://cdn.discordapp.com/avatars/190160914765316096/e1a9b937d7b1d469157ea7c2defd1288.webp?size=1024" alt="Avatar" width="30%" height="auto" />
+					<img src="https://cdn.discordapp.com/avatars/190160914765316096/e1a9b937d7b1d469157ea7c2defd1288.webp?size=1024" alt="mrphilip Avatar" width="30%" height="auto" />
 					<h4>mrphilip<strong class="discrim">#0882</strong></h4>
 					<p>Lockpicking enthusiast | Web dev | Student | Bug hunter & Hypesquad Event attendee for Discord</p>
 					<br />
@@ -71,7 +71,7 @@
 
 				<div class="card">
 					<br />
-					<img src="https://cdn.discordapp.com/avatars/439396770695479297/c165ee3e7b89dbe5c9ac767d557bf7e5.webp?size=1024" alt="Avatar" width="30%" height="auto" />
+					<img src="https://cdn.discordapp.com/avatars/439396770695479297/c165ee3e7b89dbe5c9ac767d557bf7e5.webp?size=1024" alt="KlukCZ Avatar" width="30%" height="auto" />
 					<h4>KlukCZ<strong class="discrim">#6589</strong></h4>
 
 					<p>17 yo Chem Student. Discord Testers Junior Moderator and Bug Hunter in my free time</p>
@@ -85,7 +85,7 @@
 
 				<div class="card">
 					<br />
-					<img src="https://cdn.discordapp.com/avatars/255834596766253057/cba79e1a8536bfcdec5d28fc7fd96940.webp?size=1024" alt="Avatar" width="30%" height="auto" />
+					<img src="https://cdn.discordapp.com/attachments/706884856960909354/743223513200197653/happppppppppppy.jpg" alt="Ben! Avatar" width="30%" height="auto" />
 					<h4>Ben!<strong class="discrim">#0002</strong></h4>
 
 					<p>16yo self-taught node dev | Discord bug hunter and verified bot dev | I use arch btw | <strike>aaaaaaaaaaaaaaaa</strike>
